# postframe-logic

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini
.cache/clangd/index/: BVH.cpp.E7C04A666A18AD3C.idx  BVH.h.2B0838A24F709E3A.idx  Camera.h.8AADB446A8C8A909.idx  Framebuffer.cpp.8704129A7EF97484.idx  Framebuffer.cpp.DA4F5023F6E48D66.idx  Framebuffer.h.4CA9FB91C56AEE8E.idx  GPUMeshTriangle.h.A196351CA16B5719.idx  LightSystem.cpp.3F46464C68A727EF.idx  LightSystem.h.FB55388046618815.idx  ModelLoader.cpp.42985DE8D127B796.idx  ModelLoader.h.131B1FED103FF6BB.idx  Shader.cpp.1BFC1FEF9A18FC13.idx  Shader.cpp.D99E67644177538E.idx  Shader.h.3E80D8A69C67DC55.idx  Texture.cpp.3B61CCDF98459EF4.idx  Texture.cpp.429BFEBFE7DFB8CB.idx  Texture.h.D9DA6FC72FD74033.idx  TinyGltfImpl.cpp.EEB7E5F11AACBFAE.idx  gl.c.3747DA469FC2CAAE.idx  gl.h.BD2FBCA15B3CDE3F.idx  imconfig.h.36F504F43D0F4428.idx  imgui.cpp.A5144C092F9352F6.idx  imgui.h.F06BEBD26F06F438.idx  imgui_demo.cpp.5569DCFEA80EFECF.idx  imgui_draw.cpp.13535340C1AF8730.idx  (+19 more)
.github/workflows/: windows-build.yml
assets/: base_tex.blend  base_tex.blend1  dataph.glb  deltarune_ralsei_fin.glb  logo.blend  logo.blend1  logo.glb  monkey.glb  render_base_tex.blend
assets/shaders/: pt_fragment.glsl  screen_f.glsl  screen_v.glsl
include/: BVH.h  Camera.h  Framebuffer.h  GPUMeshTriangle.h  LightSystem.h  ModelLoader.h  Shader.h  Texture.h  themes.h
src/: Framebuffer.cpp  Shader.cpp  Texture.cpp  main.cpp
src/renderer/: Framebuffer.cpp  LightSystem.cpp
src/utils/: BVH.cpp  ModelLoader.cpp  themes.cpp
